added new screen for fund suggestions

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -2,6 +2,7 @@
   <a routerLink="/home" routerLinkActive="active">Home</a>
   <span class="fill-remaining-space"></span>
   <a routerLink="/questionair" routerLinkActive="active">Start</a>
+  <a routerLink="/fund-suggestions" routerLinkActive="active">Fund Suggestions</a>
   <a routerLink="/login" routerLinkActive="active">Log In</a>
   <a routerLink="/register" routerLinkActive="active">Sign Up</a>
   <a routerLink="/aboutus" routerLinkActive="active">About us</a>
