added new screen for fund suggestions

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -3,8 +3,9 @@
   <span class="fill-remaining-space"></span>
   <a routerLink="/questionair" routerLinkActive="active">Start</a>
   <a routerLink="/fund-suggestions" routerLinkActive="active">Fund Suggestions</a>
-  <a routerLink="/login" routerLinkActive="active">Log In</a>
-  <a routerLink="/register" routerLinkActive="active">Sign Up</a>
+  <a *ngIf="!userService.loggedIn" routerLink="/login" routerLinkActive="active">Log In</a>
+  <a *ngIf="!userService.loggedIn" routerLink="/register" routerLinkActive="active">Sign Up</a>
+  <a *ngIf="userService.loggedIn" class="sign-out" (click)="onLogOut()">Log Out</a>
   <a routerLink="/aboutus" routerLinkActive="active">About us</a>
   <a routerLink="/contactus" routerLinkActive="active">Contact us</a>
 </mat-toolbar>
