--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -32,8 +32,8 @@
       </div>
       <mat-divider style="margin: 8px 0;"></mat-divider>
       <div style="margin-top: 16px;display: flex;justify-content: center;">
-        <button style="margin: 0 8px 0 0;" mat-button (click)="signInWithGoogle()">Log In using Google</button>
-        <button style="margin: 0 0 0 8px;" mat-button (click)="signInWithFaceBook()">Log In using Facebook</button>
+        <button style="margin: 0 8px 0 0;" mat-button (click)="signInWithGoogle()"><span class="brand">G</span>Log In using Google</button>
+        <button style="margin: 0 0 0 8px;" mat-button (click)="signInWithFaceBook()"><span class="brand">f</span> Log In using Facebook</button>
       </div>
     </mat-card-actions>
   </mat-card>
