--- a/src/app/report/report.html
+++ b/src/app/report/report.html
@@ -1,11 +1,14 @@
-<div> REPORT <div>
-    <div>
-      <div>
-        <div style="display: block">
-          <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
-            height="80">
-          </canvas>
-        </div>
-      </div>
+<!-- <div> REPORT <div> -->
+<div>
+  <div>
+    <div style="display: block">
+      <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+        [options]="pieChartOptions" [plugins]="pieChartPlugins" [colors]="pieChartColors" [legend]="pieChartLegend"
+        height="80">
+      </canvas>
     </div>
-    <a style="margin: 16px;" mat-raised-button routerLink="/detail-report">Get Detailed report</a>
+  </div>
+</div>
+<div style="display: flex;flex-direction: row-reverse;">
+  <a style="margin: 16px;" mat-raised-button routerLink="/detail-report">Get Detailed report</a>
+</div>
